# consoul

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  :memory:  :memory:-shm  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  CONVERSATION_CARDS_REFACTOR.md  CONVO.md  DATA_README.md  GEMINI.md  HUGGINGFACE_API_CHANGE.md  HUGGINGFACE_LOCAL_ISSUES.md  HUGGINGFACE_LOCAL_STATUS.md  HUGGINGFACE_SETUP.md  LLAMACPP_SOLUTION.md  LOADING_SCREEN_ANALYSIS.md  Makefile  PERFORMANCE.md  PERFORMANCE_TESTING.md  PROMPT_TESTING.md  PUBLISHING.md  README.md  SECURITY.md  SOUL-289-PHASE2-WIP.md  TESTING_ANALYZE_IMAGES.md  TEST_LOADING_SCREEN.md  TOKENIZER_DISCOVERY.md  TOOL_CONTROL_UX_PROPOSAL.md  TUI_RESEARCH.md  conftest.py  consoul-log.txt  coverage.json  error.txt  hi-claude.md  (+16 more)
.claude/: settings.local.json
.claude/agents/: consoul-ticket-writer.md
.gira/: .board.json  .state.json  config.json  tui_config.json  workflow-config.json
.gira/docs/: WORKFLOW.md
.gira/epics/: EPIC-001.json  EPIC-002.json  EPIC-003.json  EPIC-004.json  EPIC-005.json  EPIC-006.json  EPIC-007.json  EPIC-008.json  EPIC-009.json  EPIC-010.json  EPIC-011.json  EPIC-012.json  EPIC-013.json  EPIC-014.json  EPIC-015.json  EPIC-016.json  EPIC-017.json  EPIC-018.json  EPIC-019.json  EPIC-020.json  EPIC-021.json
.gira/events/: audit.db
.gira/hooks/: ticket-moved.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  terraform.yml
.local/: watch-docs.sh
.local/scripts/: PRICING_UPDATE.md  check_hf_models.py  compare_consoul_overhead.py  compare_streaming_performance.py  compare_tools_performance.py  test_hf_debug.py  test_hf_local.py  test_hf_minimal.py  test_llamacpp.py  test_ollama_streaming.py  test_qwen3.py  test_startup_time.py  test_transformers_direct.py
SECURITY/: index.html
advanced/searxng-setup/: index.html
api/: index.html
api/agents/: index.html
api/integration-guide/: index.html
api/model-registry/: index.html
api/reference/: index.html
api/tools/: index.html
api/tutorial/: index.html
assets/css/: consoul.css  copilot-style.css  termynal.css
cli-reference/: index.html
contributing/: index.html
data/: ollama_models.json
deployment/cloud/: README.md
development/: index.html
development/architecture/: index.html
development/service-layer/: index.html
development/testing/: index.html
docs/: CNAME  SECURITY.md  TUI_DOCS_CORRECTIONS_NEEDED.md  backend-deployment.md  contributing.md  development.md  example-prompts.md  faqs.md  index.md  installation.md  loading-screen.md  quickstart.md  redis-setup.md  sdk-tools.md  tools.md
docs/advanced/: searxng-setup.md
docs/api/: agents.md  index.md  integration-guide.md  model-registry.md  openapi.json  reference.md  tools.md  tutorial.md
docs/cli-reference/: index.md
docs/deployment/: multi-tenancy.md  performance-tuning.md
docs/development/: architecture.md  service-layer.md  testing.md
docs/examples/: custom-tool-example.py  image-analysis-example.py  tool-calling-config.yaml
docs/guides/: context-providers.md
docs/operations/: README.md  api-key-rotation.md  compliance.md  incident-response.md  load-testing.md  runbook.md  scaling-guide.md  security-checklist.md
docs/research/: read_url_tool_research.md
docs/reviews/: EPIC-012-review-corrections.md  EPIC-012-review.md
docs/sdk/: tool-calling-integration.md
docs/user-guide/: cli-chat-temp.md  cli-chat.md  code-search-troubleshooting.md  code-search.md  configuration.md  file-editing.md  getting-started.md  image-analysis.md  tui.md  usage.md
examples/: README.md  code-search-example.py  fastapi_websocket_client.py  fastapi_websocket_server.py  interactive_chat.py  ollama_chat.py  test_loading_screen.py  test_loading_standalone.py
examples/backend/: fastapi_sessions.py
examples/file-editing/: index.html
examples/legal/: Dockerfile  README.md  config.yaml  docker-compose.yml  legal_context.py  requirements.txt  server.py
examples/sdk/: AI_FEEDBACK_SUMMARY.md  README.md  SIMPLIFICATION_PROPOSAL.md  backend_approval_example.py  cli_approval_example.py  compliance_logging.py  custom_audit_logger.py  custom_profile.py  domain_specific.py  enhanced_descriptions_example.py  gguf_discovery_example.py  huggingface_discovery_example.py  minimal_chat.py  mlx_discovery_example.py  model_registry_example.py  ollama_discovery_example.py  quick_start.py  read_file_example.py  web_approval_provider.py  websocket_streaming.py
examples/server/: basic_server.py  run_server.py  security_middleware.py  test_client.html
examples/webapp/: README.md  index.html  server.py
faqs/: index.html
guides/context-providers/: index.html
installation/: index.html
loading-screen/: index.html
prompt_testing/: .gitignore  PROMPT_TESTING.md  README.md  config.json  example_prompts.json  example_prompts_detailed.json  test_prompts.py
prompt_testing/configs/: beginner_friendly.json  high_value_test.json
prompt_testing/system_prompts/: README.md  beginner_friendly.txt  code_reviewer.txt  concise_expert.txt  python_expert.txt  senior_engineer.txt
prompt_testing/test_run/: all_responses.jsonl  response_01.json  response_02.json  response_03.json  response_04.json  response_05.json  (+16 more)
quickstart/: index.html
scripts/: PRICING_UPDATE.md  README.md  generate_docs.py  generate_openapi_clients.py  scrape_ollama_library.py  test_ad_prompts.py  test_analyze_images_interactive.py  test_hf_comprehensive.py  update_pricing.py
sdk-tools/: index.html
search/: search_index.json
test_output/: response_01.json  response_02.json  response_03.json  response_04.json  response_05.json
test_system_prompt/: all_responses.jsonl  response_01.json  response_02.json  response_03.json  response_04.json  response_05.json  response_07.json  response_08.json  response_10.json  response_11.json  response_13.json  response_14.json  response_17.json  response_18.json  response_19.json  response_20.json  summary.json
tests/: __init__.py  conftest.py
(+1425 files in other folders)
