[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "consoul"
version = "0.1.0"
description = "AI-powered terminal assistant with rich TUI - brings ChatGPT/Claude to your command line"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "GoatBytes.IO", email = "jared@goatbytes.io"}
]
maintainers = [
    {name = "GoatBytes.IO", email = "jared@goatbytes.io"}
]
keywords = [
    "ai",
    "assistant",
    "terminal",
    "tui",
    "cli",
    "chatgpt",
    "claude",
    "langchain",
    "textual",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "textual>=6.5.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml (>=6.0.3,<7.0.0)",
]


[project.urls]
Homepage = "https://github.com/goatbytes/consoul"
Documentation = "https://consoul.readthedocs.io"
Repository = "https://github.com/goatbytes/consoul"
Issues = "https://github.com/goatbytes/consoul/issues"
Changelog = "https://github.com/goatbytes/consoul/blob/main/CHANGELOG.md"

[project.scripts]
consoul = "consoul.__main__:main"

# Poetry configuration
[tool.poetry]
name = "consoul"
version = "0.1.0"
description = "AI-powered terminal assistant with rich TUI - brings ChatGPT/Claude to your command line"
authors = ["GoatBytes.IO <jared@goatbytes.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/goatbytes/consoul"
repository = "https://github.com/goatbytes/consoul"
documentation = "https://consoul.readthedocs.io"
keywords = ["ai", "assistant", "terminal", "tui", "cli", "chatgpt", "claude", "langchain", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
packages = [{include = "consoul", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^6.5.0"
langchain = "^1.0.0"
langchain-openai = "^1.0.0"
langchain-anthropic = "^1.0.0"
langchain-google-genai = "^3.0.0"
click = "^8.1.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.12.0"
ruff = "^0.14.0"
mypy = "^1.7.0"
pre-commit = "^4.0.0"
attrs = "^25.4.0"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[tool.poetry.group.security.dependencies]
safety = "^3.0.0"
bandit = {extras = ["toml"], version = "^1.7.0"}

[tool.poetry.scripts]
consoul = "consoul.__main__:main"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=consoul",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["S101"]       # use of assert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Mypy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "textual.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "pydantic.*",
]
ignore_missing_imports = true

# Bandit security configuration
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
]
skips = [
    "B101",  # assert_used (we use asserts in tests)
]
