[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "consoul"
version = "0.1.0"
description = "AI-powered terminal assistant with rich TUI - brings ChatGPT/Claude to your command line"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "GoatBytes.IO", email = "jared@goatbytes.io"}
]
maintainers = [
    {name = "GoatBytes.IO", email = "jared@goatbytes.io"}
]
keywords = [
    "ai",
    "assistant",
    "terminal",
    "tui",
    "cli",
    "chatgpt",
    "claude",
    "langchain",
    "textual",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "textual>=6.5.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests>=2.25.0",
    "tiktoken>=0.5.0",
    "pyperclip>=1.8.0",
    "grep-ast>=0.9.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack>=0.11.0",
    "diskcache>=5.6.0",
    "duckduckgo-search>=7.0.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=6.2.0"]


[project.urls]
Homepage = "https://github.com/goatbytes/consoul"
Documentation = "https://consoul.readthedocs.io"
Repository = "https://github.com/goatbytes/consoul"
Issues = "https://github.com/goatbytes/consoul/issues"
Changelog = "https://github.com/goatbytes/consoul/blob/main/CHANGELOG.md"

[project.scripts]
consoul = "consoul.__main__:main"

# Poetry configuration
[tool.poetry]
name = "consoul"
version = "0.1.0"
description = "AI-powered terminal assistant with rich TUI - brings ChatGPT/Claude to your command line"
authors = ["GoatBytes.IO <jared@goatbytes.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/goatbytes/consoul"
repository = "https://github.com/goatbytes/consoul"
documentation = "https://consoul.readthedocs.io"
keywords = ["ai", "assistant", "terminal", "tui", "cli", "chatgpt", "claude", "langchain", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
packages = [{include = "consoul", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^6.5.0"
langchain = "^1.0.5"
langchain-openai = "^1.0.2"
langchain-anthropic = "^1.0.2"
langchain-google-genai = "^3.0.1"
langchain-ollama = "^1.0.0"
click = "^8.3.0"
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
pypdf = {version = "^6.2.0", optional = true}

# Code search dependencies (AST parsing and caching)
grep-ast = "^0.9.0"                    # AST parsing and tag extraction (used by Aider)
tree-sitter = "^0.25.0"                # Tree-sitter parser core
tree-sitter-language-pack = "^0.11.0"  # Multi-language parser bundle (100+ languages)
diskcache = "^5.6.0"                   # SQLite-backed disk caching

# Web search dependencies
duckduckgo-search = "^7.0.0"           # Free web search via DuckDuckGo (zero setup)

[tool.poetry.extras]
pdf = ["pypdf"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
ruff = "^0.14.4"
mypy = "^1.18.2"
pre-commit = "^4.4.0"
attrs = "^25.4.0"
types-pyyaml = "^6.0.12.20250915"
types-requests = "^2.32.4.20250913"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.23"
mkdocstrings = {extras = ["python"], version = "^0.30.1"}

[tool.poetry.group.security.dependencies]
safety = "^3.7.0"
bandit = {extras = ["toml"], version = "^1.8.6"}

[tool.poetry.scripts]
consoul = "consoul.__main__:main"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=consoul",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
extend-exclude = [".claude"]  # Exclude .claude directory from linting

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["S101"]       # use of assert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Mypy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
exclude = [
    "^\\.claude/",  # Exclude .claude directory from type checking
]

[[tool.mypy.overrides]]
module = [
    "textual.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "langchain_ollama.*",
    "pydantic.*",
    "click.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "consoul.tui.*"
disallow_untyped_decorators = false
disallow_subclassing_any = false

# Bandit security configuration
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
]
skips = [
    "B101",  # assert_used (we use asserts in tests)
]
